--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.4.0",
     "@gsap/react": "^2.1.2",
-    "@react-router/node": "^7.9.2",
-    "@react-router/serve": "^7.9.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
@@ -20,16 +19,18 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-markdown": "^10.1.0",
-    "react-router": "^7.9.2"
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.9.2",
+    "@react-router/dev": "^7.9.5",
+    "@react-router/node": "^7.9.5",
+    "@react-router/serve": "^7.9.5",
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.13",
     "@types/node": "^22",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "react-router": "^7.9.5",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.2",
