--- a/vercel.json
+++ b/vercel.json
@@ -2,16 +2,10 @@
   "buildCommand": "npm run build",
   "outputDirectory": "build/client",
   "framework": null,
-  "functions": {
-    "build/server/index.js": {
-      "memory": 1024,
-      "maxDuration": 10
-    }
-  },
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/build/server/index.js"
+      "destination": "/api/index"
     }
   ]
 }
