--- a/package.json
+++ b/package.json
@@ -1,43 +1,39 @@
 {
-  "name": "portfolio",
+  "name": "friendly-dev",
   "private": true,
   "type": "module",
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "json-server": "json-server data/db.json --port 8000"
   },
   "dependencies": {
-    "@emotion/is-prop-valid": "^1.4.0",
-    "@gsap/react": "^2.1.2",
-    "clsx": "^2.1.1",
-    "framer-motion": "^12.23.24",
-    "gsap": "^3.13.0",
-    "isbot": "^5",
+    "@react-router/node": "^7.5.3",
+    "@react-router/serve": "^7.5.3",
+    "framer-motion": "^12.16.0",
+    "isbot": "^5.1.27",
+    "motion": "^12.23.24",
     "ogl": "^1.0.11",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "react-router": "^7.5.3"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.9.5",
-    "@react-router/node": "^7.9.5",
-    "@react-router/serve": "^7.9.5",
-    "@tailwindcss/typography": "^0.5.19",
-    "@tailwindcss/vite": "^4.1.13",
-    "@types/node": "^22",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
-    "react-router": "^7.9.5",
-    "tailwindcss": "^4.1.13",
-    "tw-animate-css": "^1.4.0",
-    "typescript": "^5.9.2",
-    "vite": "^7.1.12",
-    "vite-plugin-devtools-json": "^1.0.0",
-    "vite-plugin-raw": "^1.0.3",
-    "vite-plugin-static-copy": "^3.1.4",
+    "@react-router/dev": "^7.5.3",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/vite": "^4.1.4",
+    "@types/node": "^20",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "json-server": "^1.0.0-beta.3",
+    "tailwindcss": "^4.1.4",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.3",
+    "vite-plugin-devtools-json": "^0.1.0",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
